--- a/src/app/gettingstarted.html
+++ b/src/app/gettingstarted.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 
 <head>
-<title>ScratchJr</title>
+<title>ScratchJr by Algoritmika</title>
 
 <script language="javascript">
     window.scratchJrPage = 'gettingStarted';
