--- a/src/app/index.html
+++ b/src/app/index.html
@@ -8,7 +8,7 @@
 <html>
 
 <head>
-<title>ScratchJr</title>
+<title>ScratchJr by Algoritmika</title>
 <script>
     window.scratchJrPage = 'index';
 </script>
